--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="col-md-6 repos">
-      <div *ngIf="reposLength == 0" class="users-not-foun">
+      <div *ngIf="reposLength == 0" class="users-not-found">
         <h1>No Repos Have Been Found</h1>
       </div>
       <div class="row">
